--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cytoscape": "^3.21.0",
     "next": "^12.1.0",
     "react": "^17.0.2",
+    "react-cytoscapejs": "^1.2.1",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
